<resources>
    <string name="app_name">Faturantia</string>
    <string name="login_view">Login</string>
    <string name="email_view">E-mail</string>
    <string name="password_view">Password</string>
    <string name="confirm_pass_view">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="register_view">Register</string>
    <string name="faturantia">Faturantia</string>
    <string name="ver_fat_view">View bill</string>
    <string name="loja_view">Store name</string>
    <string name="locLoja_view">Store location</string>
    <string name="buy_date_view">Date of purchase</string>
    <string name="name_product">Product name</string>
    <string name="bill_name">Bill name</string>
    <string name="add_pdf">+PDF </string>
    <string name="continue_but">Continue without Guarantee </string>
    <string name="show_pdf">PDF </string>
    <string name="category">Category </string>
    <string name="add_img">+ Image </string>
    <string name="show_img">Image </string>
    <string name="datawarrany">Expiration date</string>
    <string name="hintdata">DD/MM/YYYY</string>
    <string name="hint_store_name">Store name</string>
    <string name="next_but">Next</string>
    <string name="fat_view">Bill</string>
    <string name="cancel_but">Cancel</string>
    <string name="guarantee_tit">Guarantee</string>
    <string name="guarantee_add_view">Add Bill</string>
    <string name="exp_date">Expire Date</string>
    <string name="imp_guarantee">Important?</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="changepass">Change Password</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="support">Support</string>
    <string name="important_guarantee">Important Guarantee</string>
    <string name="remember_view">Remember when?</string>
    <string name="logout">Logout</string>
    <string name="imp">Important</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="save_but">Save</string>
    <string name="sign_Up">Sign up</string>
    <string name="name_profile">[Name]</string>
    <string name="name_edit">Name</string>
    <string name="notas_txt">Notes:</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="inf_pessoal">Personal Information</string>
    <string name="back_button">Back</string>
    <string name="email_lebre">20220907@gmail.com</string>
    <string name="email_sebas">20220905@gmail.com</string>
    <string name="privacy">Security and Privacy</string>

    <string name="notes_hint">Write a descriptive note here...</string>

    <string-array name="category_array">
        <item>Categoria 1</item>
        <item>Categoria 2</item>
        <item>Categoria 3</item>
        <!-- Adicione mais categorias conforme necessário -->
    </string-array>

</resources>