<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">


    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title=""
            android:icon="@drawable/arrow"/>
        <item
            android:id="@+id/nav_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/home"
            android:icon="@drawable/main_page"/>
        <item
            android:id="@+id/nav_important_guarantee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/important_guarantee"
            android:icon="@drawable/important"/>
        <item
            android:id="@+id/nav_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/support"
            android:icon="@drawable/supp"/>
    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/logout"
                android:icon="@drawable/logout_menu"/>

        </menu>
    </item>




</menu>