<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    app:elevation="0dp"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="388dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:minHeight="?attr/actionBarSize"
            android:textSize="40sp"
            android:theme="@style/tittoolbar"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/faturantia"
            app:titleTextAppearance="@style/tittoolbar"
            app:titleTextColor="#FFFFFF" />

        <Button
            android:id="@+id/profile_pic"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="28dp"
            android:text="@string/add_img"
            app:icon="@drawable/edit_profile_pic"
            app:iconSize="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name_edit"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/name_edit"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="@+id/name_edit"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

        <EditText
            android:id="@+id/name_edit"
            style="@style/edittext_background"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <TextView
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/location"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/local_edit"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="@+id/local_edit"
            app:layout_constraintTop_toBottomOf="@+id/name_edit"/>

        <EditText
            android:id="@+id/local_edit"
            style="@style/edittext_background"
            android:layout_width="365dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/local"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/save_profile"
            android:layout_width="354dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:hint="@string/save_but"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/local_edit"
            app:layout_constraintStart_toStartOf="@+id/local_edit"
            app:layout_constraintTop_toBottomOf="@+id/local_edit"
            app:passwordToggleEnabled="true"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/back_profile"
            android:layout_width="354dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:hint="@string/back_button"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/save_profile"
            app:layout_constraintStart_toStartOf="@+id/save_profile"
            app:layout_constraintTop_toBottomOf="@+id/save_profile"
            app:passwordToggleEnabled="true"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:elevation="5dp"
        app:itemIconTint="@color/greenmain"
        app:menu="@menu/burguer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>