<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    app:elevation="0dp"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">

    <!-- Envolva tudo em um ScrollView -->
    <ScrollView
        android:id="@+id/scroll_view_fat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:visibility="visible"
        tools:context=".FaturaActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="388dp"
                android:layout_height="58dp"
                android:layout_marginTop="2dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/tittoolbar"
                app:layout_constraintBottom_toTopOf="@+id/fatura_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.216"
                app:title="@string/faturantia"
                app:titleTextAppearance="@style/tittoolbar"
                app:titleTextColor="#FFFFFF" />

            <TextView
                android:id="@+id/fatura_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/fat_view"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.282"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add_img_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="115dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatura_view"/>


            <LinearLayout
                android:id="@+id/add_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatura_view">
                <Button
                    android:id="@+id/add_img_but"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/custom_button_background"
                    android:text="@string/add_img"
                    android:textColor="#000000"
                    android:textSize="25sp" />
                <Button
                    android:id="@+id/add_pdf_but"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/custom_button_background"
                    android:onClick="buttonCreateFile"
                    android:text="@string/add_pdf"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fatura_view">

                <Button
                    android:id="@+id/show_img_but"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/custom_button_background"
                    android:text="@string/show_img"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/show_pdf_but"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/custom_button_background"
                    android:text="@string/show_pdf"
                    android:textColor="#000000"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/bill_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/bill_name"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/bill_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/bill_name"
                app:layout_constraintTop_toBottomOf="@+id/add_layout" />

            <EditText
                android:id="@+id/bill_name"
                style="@style/edittext_background"
                android:layout_width="350dp"
                android:layout_height="51dp"
                android:hint="@string/bill_name"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_name_view"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/loja_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/loja_view"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/edit_nome_loja"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edit_nome_loja"
                app:layout_constraintTop_toBottomOf="@+id/bill_name" />

            <EditText
                android:id="@+id/edit_nome_loja"
                style="@style/edittext_background"
                android:layout_width="350dp"
                android:layout_height="51dp"
                android:ems="10"
                android:hint="@string/hint_store_name"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loja_view" />

            <TextView
                android:id="@+id/locLoja_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/locLoja_view"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/loc_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/loc_view"
                app:layout_constraintTop_toBottomOf="@+id/edit_nome_loja" />

            <EditText
                android:id="@+id/loc_view"
                style="@style/edittext_background"
                android:layout_width="350dp"
                android:layout_height="51dp"
                android:ems="10"
                android:hint="@string/locLoja_view"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locLoja_view" />

            <TextView
                android:id="@+id/buy_date_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_date_view"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/purchase_date_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/purchase_date_edit"
                app:layout_constraintTop_toBottomOf="@+id/loc_view" />

            <CalendarView
                android:id="@+id/purchase_date_calendar"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:background="@color/greenmain"
                android:backgroundTint="@color/greenmain"
                android:elevation="10dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/purchase_date_edit"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/purchase_date_edit"
                app:layout_constraintTop_toBottomOf="@+id/purchase_date_edit"
                tools:visibility="gone" />

            <EditText
                android:id="@+id/purchase_date_edit"
                style="@style/edittext_background"
                android:layout_width="350dp"
                android:layout_height="51dp"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hintdata"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buy_date_view" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/next_but"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/purchase_date_edit" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/cancel_but"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/next_button" />


            <!-- Seu conteúdo existente aqui (Toolbar, Buttons, EditTexts, etc.) -->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:elevation="5dp"
        app:itemIconTint="@color/greenmain"
        app:menu="@menu/burguer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>



