<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faturantia"
        android:textColor="@color/greenmain"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/fullName_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/full_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/tit_view" />

    <EditText
        android:id="@+id/editTextText"
        style="@style/edittext_background"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_view" />

    <TextView
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/edittext_background"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_view"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_view" />

    <TextView
        android:id="@+id/pass_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/edittext_background"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/password_view"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_view" />

    <TextView
        android:id="@+id/confirm_pass_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_pass_view"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPassword"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        style="@style/edittext_background"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/confirm_pass_view"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass_view" />

    <Button
        android:id="@+id/register_butt"
        android:layout_width="354dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:hint="@string/register_view"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <Button
        android:id="@+id/cancel_butt_reg"
        android:layout_width="354dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/cancel_but"
        android:textColorHint="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_butt"
        app:layout_constraintStart_toStartOf="@+id/register_butt"
        app:layout_constraintTop_toBottomOf="@+id/register_butt" />

</androidx.constraintlayout.widget.ConstraintLayout>