<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    app:elevation="0dp"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="388dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:minHeight="?attr/actionBarSize"
            android:textSize="40sp"
            android:theme="@style/tittoolbar"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/faturantia"
            app:titleTextAppearance="@style/tittoolbar"
            app:titleTextColor="#FFFFFF" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="193dp"
            android:layout_height="193dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/profilepic"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="168dp"
            android:layout_height="52dp"
            android:text="@string/name_profile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

        <LinearLayout
            android:id="@+id/inf_pessoal"
            android:layout_width="390dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name">

            <ImageView
                android:id="@+id/inf_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_manage" />

            <Button
                android:id="@+id/inf_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:text="@string/inf_pessoal"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="73dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inf_pessoal">

            <ImageView
                android:id="@+id/security_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/privacy" />

            <Button
                android:id="@+id/security_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:text="@string/privacy"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:elevation="5dp"
        app:itemIconTint="@color/greenmain"
        app:menu="@menu/burguer_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>